kubernetes/grid-layout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid-layout-deployment
  labels:
    app: grid-layout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grid-layout
  template:
    metadata:
      labels:
        app: grid-layout
    spec:
      containers:
      - name: grid-layout-container
        image: oscaryik/grid-thing-grid-layout:2.0
        ports:
        - containerPort: 8092
---
apiVersion: v1
kind: Service
metadata:
  name: grid-layout-service
spec:
  selector:
    app: grid-layout
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 8092
