kubernetes/grid-media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid-media-deployment
  labels:
    app: grid-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grid-media
  template:
    metadata:
      labels:
        app: grid-media
    spec:
      containers:
      - name: grid-media-container
        image: oscaryik/grid-thing-widget:2.2
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: grid-media-service
spec:
  selector:
    app: grid-media
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
