kubernetes/grid-themes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid-themes-deployment
  labels:
    app: grid-themes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grid-themes
  template:
    metadata:
      labels:
        app: grid-themes
    spec:
      containers:
      - name: grid-themes-container
        image: oscaryik/grid-thing-grid-themes:2.4
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: grid-themes-service
spec:
  selector:
    app: grid-themes
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
